--- a/src/app/home/master-report/master-sale-report/master-sale-report.component.html
+++ b/src/app/home/master-report/master-sale-report/master-sale-report.component.html
@@ -37,8 +37,7 @@
             class="form-control" />
         </div>
         <div class="col-md-2 padding-bot-input">
-          <input autocomplete="off" type="text" id="sale_date" name="sale_date" [(ngModel)]="filterItem.sale_date" placeholder="{{ summary.dateRangeData }}"
-            class="form-control" bsDaterangepicker />
+          <input autocomplete="off" type="text" id="sale_date" name="sale_date" [(ngModel)]="filterItem.sale_date" placeholder="{{ summary.dateRangeData }}" class="form-control" bsDaterangepicker />
         </div>
         <div class="col-md-1 padding-bot-input">
           <select class="ace form-control" name="start_time" [(ngModel)]="filterItem.start_time">
