--- a/src/app/home/purchase-due/purchase-due.component.html
+++ b/src/app/home/purchase-due/purchase-due.component.html
@@ -128,7 +128,7 @@
                       </div>
                   </div>
                 </div>
-                <div class="col-lg-12">
+                <!-- <div class="col-lg-12">
                   <div class="card mb-3 widget-content widget-area-padding card-margin">
                       <div class="widget-content-wrapper net-wiget">
                           <div class="widget-content-left">
@@ -139,7 +139,7 @@
                           </div>
                       </div>
                   </div>
-                </div>
+                </div> -->
                 <div class="col-lg-12">
                   <div class="card mb-3 widget-content widget-area-padding card-margin">
                       <div class="widget-content-wrapper net-wiget">
