--- a/src/app/home/sale/sale.component.html
+++ b/src/app/home/sale/sale.component.html
@@ -93,9 +93,7 @@
                                     <div class="widget-heading">
                                     {{ cart.medicine.type }}.
                                     {{ cart.medicine.brand_name }}
-                                    <span class="medicine-power">&nbsp;({{ cart.medicine.strength }})</span>
-                                    <br />
-                                    <small>{{ cart.company.name }}</small>
+                                    <span class="medicine-power">&nbsp;({{ cart.medicine.brand }})</span>
                                     </div>
                                 </div>
                                 </div>
