--- a/src/app/home/report/sale-report/sale-report-filter/sale-report-filter.component.html
+++ b/src/app/home/report/sale-report/sale-report-filter/sale-report-filter.component.html
@@ -11,7 +11,7 @@
       <div class="form-group mx-sm-3 mb-2">
         <label for="inputPassword2" class="sr-only">Product</label>
         <div id="scrollable-dropdown-menu">
-          <input placeholder="Medicine Name" #cartMedicine id="typeahead-basic" name="search"
+          <input placeholder="Product Name" #cartMedicine id="typeahead-basic" name="search"
             [(ngModel)]="saleData.product" type="text" class="form-control form-input-width-100"
             [ngbTypeahead]="searchProduct" />
         </div>
