--- a/src/app/home/sale/sale-list/sale-filter/sale-filter.component.html
+++ b/src/app/home/sale/sale-list/sale-filter/sale-filter.component.html
@@ -15,7 +15,7 @@
       <div class="form-group mx-sm-3 mb-2">
         <label for="medicine_name" class="sr-only">Medicine </label>
         <div id="scrollable-dropdown-menu">
-          <input placeholder="Medicine Name" id="typeahead-basic" name="search" [(ngModel)]="saleData.medicine"
+          <input placeholder="Product Name" id="typeahead-basic" name="search" [(ngModel)]="saleData.medicine"
             type="text" class="form-control form-input-width-100" [ngbTypeahead]="searchMedicine" />
         </div>
       </div>
